<?xml version="1.0" encoding="utf-8"?>
<!-- I used Constraint Layout to control design easy-->
<!--Used Scroll View To scroll all list-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shoes_inst_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:id="@+id/tv_inst"
                style="@style/WelcomeScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="monospace"
                android:text="@string/welcome_at_instruction_screen"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_instruction"
                style="@style/WelcomeScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instr_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_inst" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_go_to_list_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:backgroundTint="@color/purple_200"
                android:padding="@dimen/_10sdp"
                android:text="@string/let_s_explore"
                app:cornerRadius="@dimen/_10sdp"
                app:icon="@drawable/ic_arrow_forward_"
                app:iconGravity="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_instruction" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>