<?xml version="1.0" encoding="utf-8"?>
<!-- I used Linear Layout because the design is very simple-->
<!--Using Material it support by google and it make design look great-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoe"
            type="com.hanaahany.shoestoreapp.modle.ShoeDataList" />

        <variable
            name="vm"
            type="com.hanaahany.shoestoreapp.ui.fragment.shoelist.ShoeListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/shoes_back_image">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_cancel"
            android:layout_gravity="end"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name_shoe_details" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/shoe_name"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_name_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:text="@={shoe.name}"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/shoe_company"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_company_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:text="@={shoe.company}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/shoe_size"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_size_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:text="@={shoe.size}"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/shoe_description"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_desc_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:text="@={shoe.desc}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_shoe_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            app:cornerRadius="@dimen/_5sdp"
            android:text="@string/save"
            android:backgroundTint="@color/purple_200" />

    </LinearLayout>
</layout>
